--- a/portfolio.html
+++ b/portfolio.html
@@ -55,29 +55,51 @@
           </div>
 
         <div class="row row-style text-center">
-            <!--FIRST COLUMN: PIC-->
             <div class="col-6 my-col">
                 <section>
-                    <img src="./assets/Thumbnail2.png" class="img-fluid" alt="welcome page of Librar.io" />
+                <div class="card-md">
+                        <img src="./assets/Thumbnail2.png" class="img-fluid" alt="welcome page of Librar.io">
+                        <div class="card-body">
+                          <h2 class="card-title">Librar.io</h2>
+                        </div>
+                        <div class="card-footer text-muted">
+                            <a href="https://mcraepv.github.io/librar.io/" class="card-link" target="_blank">Live Site</a>
+                            <a href="https://github.com/mcraepv/librar.io" class="card-link" target="_blank">Git Hub</a>
+                        </div>
+                      </div>
                 </section>
             </div>
-
-            <!--SECOND COLUMN: PIC-->
             <div class="col-6 my-col">
                 <aside>
-                    <img src="./assets/thumbnail3.jpg.png" class="img-fluid" alt="picture of a coding quiz" />
+                  <div class="card-md">
+                        <img src="./assets/thumbnail3.jpg.png" class="img-fluid" alt="picture of a coding quiz">
+                        <div class="card-body">
+                          <h2 class="card-title">JavaScript Aptitude</h2>
+                        </div>
+                        <div class="card-footer text-muted">
+                            <a href="https://mghaffar89.github.io/JavaScript-Code-Quiz/" class="card-link" target="_blank">Live Site</a>
+                            <a href="https://github.com/mghaffar89/JavaScript-Code-Quiz" class="card-link" target="_blank">Git Hub</a>
+                        </div>
+                      </div>
                 </aside>
             </div>
         </div>
-        <!--THIRD ROW-->
         <div class="row row-style text-center">
-            <!--FIRST COLUMN: PIC-->
+            
             <div class="col-6 my-col">
                 <section>
-                    <img src="#" class="img-fluid" alt="" />
+                  <div class="card-md">
+                        <img src="./assets/thumbnail4.png" class="img-fluid" alt="picture of a day planner">
+                        <div class="card-body">
+                          <h2 class="card-title">Schedule Your Day!</h2>
+                        </div>
+                        <div class="card-footer text-muted">
+                            <a href="https://mghaffar89.github.io/Day-Planner/" class="card-link" target="_blank">Live Site</a>
+                            <a href="https://github.com/mghaffar89/Day-Planner" class="card-link" target="_blank">Git Hub</a>
+                        </div>
+                      </div>
                 </section>
             </div>
-            <!--SECOND COLUMN: PIC-->
             <div class="col-6 my-col">
                 <aside>
                     <img src="./assets/Thumbnail5.png" class="img-fluid" alt="blue image that says coming soon" />
@@ -86,17 +108,14 @@
         </div>
 
         <div class="row row-style text-center">
-            <!--FIRST COLUMN: PIC-->
             <div class="col-6 my-col">
                 <section>
-                    <img src="#" class="img-fluid" alt="welcome page of Librar.io" />
+                    <img src="#" class="img-fluid" alt="..." />
                 </section>
             </div>
-
-            <!--SECOND COLUMN: PIC-->
             <div class="col-6 my-col">
                 <aside>
-                    <img src="#" class="img-fluid" alt="picture of a coding quiz" />
+                    <img src="#" class="img-fluid" alt="..." />
                 </aside>
             </div>
         </div>
@@ -104,14 +123,15 @@
 
     <footer class="navbar fixed-bottom" id="footer">
         <div class="col-md-6 col-sm-5 text-center">
-          <p class="copyright d-none d-sm-block" style="font-family:Ribeye Marrow, cursive;">&copy; Copyright 2020</p>
+          <p class="copyright d-none d-sm-block" style="font-family:Ribeye Marrow, cursive;">&copy; MinaG 2020</p>
         </div>
         <div class="col-md-6 col-sm-7 text-center">
           <section>
             <ul class="menu">
-              <li><a href="#" target="_blank" class="fa fa-linkedin"></a></li>
-              <li><a href="#" target="_blank" class="fa fa-github"></a></li>
-              <li><a href="#" target="_blank" class="fa fa-facebook"></a></li>
+              <li><a href="https://www.linkedin.com/in/mariam-ghaffar/" target="_blank" class="fa fa-linkedin"></a></li>
+              <li><a href="https://github.com/mghaffar89" target="_blank" class="fa fa-github"></a></li>
+              <li><a href="https://www.facebook.com/ghaffar.mina" target="_blank" class="fa fa-facebook"></a></li>
+              <li><a href="./assets/Mariam_Ghaffar_resume.pdf" target="_blank" class="fa fa-file"></a></li>
             </ul>
           </section>
         </div>
