--- a/index.html
+++ b/index.html
@@ -74,14 +74,15 @@
 
     <footer class="navbar fixed-bottom" id="footer">
         <div class="col-md-6 col-sm-5 text-center">
-          <p class="copyright d-none d-sm-block" style="font-family:Ribeye Marrow, cursive;">&copy; Copyright 2020</p>
+          <p class="copyright d-none d-sm-block" style="font-family:Ribeye Marrow, cursive;">&copy; MinaG 2020</p>
         </div>
         <div class="col-md-6 col-sm-7 text-center">
           <section>
             <ul class="menu">
-              <li><a href="#" target="_blank" class="fa fa-linkedin"></a></li>
-              <li><a href="#" target="_blank" class="fa fa-github"></a></li>
-              <li><a href="#" target="_blank" class="fa fa-facebook"></a></li>
+              <li><a href="https://www.linkedin.com/in/mariam-ghaffar/" target="_blank" class="fa fa-linkedin"></a></li>
+              <li><a href="https://github.com/mghaffar89" target="_blank" class="fa fa-github"></a></li>
+              <li><a href="https://www.facebook.com/ghaffar.mina" target="_blank" class="fa fa-facebook"></a></li>
+              <li><a href="./assets/Mariam_Ghaffar_resume.pdf" target="_blank" class="fa fa-file"></a></li>
             </ul>
           </section>
         </div>
